make clean code about jquery mounted with vue.js

--- a/web/index.html
+++ b/web/index.html
@@ -257,6 +257,8 @@ musicians
   </div>
 </div>
 </div>
+<script src="ressources/js/app.js"></script>
+
 <script src="ressources/js/musician-func.js"></script>
 <script src="ressources/js/preference-func.js"></script>
 <script src="ressources/js/app-vue.js"></script>
