--- a/web/index.html
+++ b/web/index.html
@@ -82,7 +82,6 @@ musicians
 </pre>
 </div>
 -->
-
 <div class="row">
   <div class="col-8" style="height:60vh; position: relative">
     <div class="loader-container">
@@ -163,12 +162,6 @@ musicians
       <!--<img src="musician.image">-->
     </div>
 
-
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" v-model="musician.laser"/>
-      <label for="laser" class="form-check-label">Laser</label>
-    </div>
-
     <div class="form-group">
       <input type="submit" class="btn btn-primary" />
     </div>
@@ -184,6 +177,18 @@ musicians
       </div>
       <label>X : {{ preference.x }}</label><br>
       <label>Y : {{ preference.y }}</label>
+
+      <div class="">
+        <label class="toggle">
+          <input type="checkbox" v-model="preference.laser">
+          <span data-unchecked="Off" data-checked="On"></span>
+        </label>
+
+
+        <!-- <input type="checkbox" class="form-check-input" v-model="preference.laser"/>
+        <label for="laser" class="form-check-label">Laser</label> -->
+      </div>
+
       <div class="form-group">
         <input type="submit" class="btn btn-primary" />
       </div>
@@ -205,7 +210,6 @@ musicians
             <th scope="col">#</th>
             <th scope="col">Nom</th>
             <th scope="col">Image</th>
-            <th scope="col">Laser</th>
             <th colspan="3">Gestions</th>
           </tr>
         </thead>
@@ -215,7 +219,6 @@ musicians
             <th scope="row">{{ musician.idMusician }}</th>
             <td>{{ musician.name }}</td>
             <td>{{ musician.image }}</td>
-            <td>{{ musician.laser }}</td>
             <td colspan="3">
               <button class="btn btn-danger"  v-on:click="deleteMusician(musician.idMusician)"><i class="far fa-trash-alt"></i></button>
               <button class="btn btn-warning" v-on:click="updateMusician(musician)"><i class="far fa-edit"></i></button>
@@ -237,6 +240,7 @@ musicians
             <th scope="col">Label</th>
             <th scope="col">X</th>
             <th scope="col">Y</th>
+            <th scope="col">Laser</th>
             <th>Gestions</th>
           </tr>
         </thead>
@@ -246,6 +250,7 @@ musicians
             <td>{{ preference.wording }}</td>
             <td>{{ preference.x }}</td>
             <td>{{ preference.y }}</td>
+            <td>{{ musician.laser }}</td>
             <td colspan="3">
               <button class="btn btn-danger"  v-on:click="deletePreference(preference.idPreference)"><i class="far fa-trash-alt"></i></button>
               <button class="btn btn-warning"  v-on:click="updatePreference(preference)"><i class="far fa-edit"></i></button>
